[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/Interface/Game-interface/Sprites-IconsWeapons.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Interfaces/Interface.gd" type="Script" id=2]

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Weapon_status_box" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.261
anchor_right = 1.0
anchor_bottom = 0.261
margin_left = -40.4786
margin_top = -19.6087
margin_right = -0.478638
margin_bottom = 20.3913
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current_weapon" type="Sprite" parent="Weapon_status_box"]
position = Vector2( -32, 2 )
texture = ExtResource( 1 )
hframes = 3

[node name="Ammo_info" type="Label" parent="Weapon_status_box"]
margin_left = -12.846
margin_top = -1.45676
margin_right = 27.154
margin_bottom = 12.5432
__meta__ = {
"_edit_use_anchors_": false
}
